tests/ui/result_ext.stderr
warning: panic message is not a string literal
   --> src/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error: Result::unwrap_or_abort() test
 --> tests/ui/result_ext.rs:4:25
  |
4 | result_unwrap_or_abort!(one, two);
  |                         ^^^

error: BOOM: Result::expect_or_abort() test
 --> tests/ui/result_ext.rs:5:25
  |
5 | result_expect_or_abort!(one, two);
  |                         ^^^
